Fixing some broken css for search

--- a/src/styles/_box.scss
+++ b/src/styles/_box.scss
@@ -64,8 +64,7 @@
   }
 
   .box-table-search {
-    border        : none;
-    border-bottom : 1px solid #cecece;
+    border-width  : 0 0 1px 0;
     margin-bottom : 20px;
     padding       : 10px 0;
     width         : 100%;
